--- a/analisis/reg-multiple.qmd
+++ b/analisis/reg-multiple.qmd
@@ -2,22 +2,8 @@
 title: "Lineal múltiple"
 ---
 
-```{=html}
-<style>
-body {
-text-align: justify}
-</style>
-```
-
-```{r setup, include=FALSE, message=FALSE, warning=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
-                      fig.align = 'center', # Para que los gráficos de los comandos estén centrados en la página
-                      out.width = '60%') # Para modificar el tamaño de los gráficos (en este caso hacerlos algo más pequeños)
-```
-
 ```{r include=FALSE}
-library(tidyverse)
-library(pacman)
+setwd(here::here())
 source("00_datos/source.R")
 ```
 
