--- a/analisis/ttest.qmd
+++ b/analisis/ttest.qmd
@@ -3,8 +3,7 @@ title: "T-test"
 ---
 
 ```{r include=FALSE}
-library(tidyverse)
-library(pacman)
+setwd(here::here())
 source("00_datos/source.R")
 ```
 
