--- a/df-var/edicion-variables.qmd
+++ b/df-var/edicion-variables.qmd
@@ -2,23 +2,8 @@
 title: "Edición de variables"
 ---
 
-```{=html}
-<style>
-body {
-text-align: justify}
-</style>
-```
-
-```{r setup, include=FALSE, message=FALSE, warning=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
-                      fig.align = 'center', # Para que los gráficos de los comandos estén centrados en la página
-                      out.width = '60%') # Para modificar el tamaño de los gráficos (en este caso hacerlos algo más pequeños)
-```
-
 ```{r include=FALSE}
-setwd("C:/Users/Lenovo/OneDrive/Escritorio/Apuntes_R")
-library(tidyverse)
-library(pacman)
+setwd(here::here())
 source("00_datos/source.R")
 ```
 
@@ -69,7 +54,7 @@ datos <- read_xlsx("dirección_datos-xlsx") %>%
 
 Para poder recodificar y crear varaibles se usa el comando `mutate` (*de dplyr*). Este es de gran utilidad si se usa junto a comandos que permiten añadir condiciones lógicas como `ifelse` o `case_when`.
 
-### **Pasos previos**
+### Pasos previos
 
 Antes de recodificar una variable es necesario conocer cómo es la variable original. Para ello:
 
@@ -85,7 +70,7 @@ class(Datos$edad)
 table(Datos$clase, useNA="ifany") #La opción useNA="ifany" es opcional, y se añade para que en la tabla se muestren también los valores perdidos.
 ```
 
-### **Crear una nueva variable a partir de operaciones sobre otras existentes**
+### Crear una nueva variable a partir de operaciones sobre otras existentes
 
 -   Ej1.: calcular la edad de los encuestados a partir del año de nacimiento
 
@@ -101,7 +86,7 @@ datos <- datos %>%
   mutate(votosFO_porcentaje = votos_FO/votostotales*100)
 ```
 
-### **El comando case_when**
+### El comando case_when
 
 ``` r
 Datos <- Datos %>%
@@ -122,7 +107,7 @@ table(Datos$clase_rec)
 
 La opción TRUE en este comando significa "todos los demás valores". Si no se añadiera, todos los valores que no coinciden con las condiciones se enviarían a perdidos (NA).
 
-### **El comando ifelse**
+### El comando ifelse
 
 El comando ifelse es una secuencia lógica con tres elementos. Un primer número, que es la categoría que se quiere transformar, un segundo número, que es en el que se transforma, y una tercera condición para el resto de valores. Esta puede ser otro número, NA o otra secuencia de ifelse.
 
