--- a/df-var/edicion-variables.qmd
+++ b/df-var/edicion-variables.qmd
@@ -7,12 +7,12 @@ setwd(here::here())
 source("00_datos/source.R")
 ```
 
-## 1. Renombrar una variable
+## Renombrar una variable
 
 **Opción 1**:
 
 ``` r
-Datos <- rename(Datos, nombre_nuevo = nombre_viejo)
+datos <- rename(datos, nombre_nuevo = nombre_viejo)
 ```
 
 **Opción 2**:
@@ -50,7 +50,7 @@ datos <- read_xlsx("dirección_datos-xlsx") %>%
 
 ------------------------------------------------------------------------
 
-## 2. Recodificar una variable (o crear una nueva)
+## Recodificar una variable (o crear una nueva)
 
 Para poder recodificar y crear varaibles se usa el comando `mutate` (*de dplyr*). Este es de gran utilidad si se usa junto a comandos que permiten añadir condiciones lógicas como `ifelse` o `case_when`.
 
@@ -70,7 +70,7 @@ class(Datos$edad)
 table(Datos$clase, useNA="ifany") #La opción useNA="ifany" es opcional, y se añade para que en la tabla se muestren también los valores perdidos.
 ```
 
-### Crear una nueva variable a partir de operaciones sobre otras existentes
+### Nueva variable a partir de operaciones sobre otras existentes
 
 -   Ej1.: calcular la edad de los encuestados a partir del año de nacimiento
 
@@ -88,22 +88,30 @@ datos <- datos %>%
 
 ### El comando case_when
 
+Permite crear nuevas variables a partir de secuencias lógicas múltiples.
+
 ``` r
 Datos <- Datos %>%
   mutate(edad = case_when(
-    edad == 29 ~ 30, # reemplaza 29 por 30
-    edad == 2 ~ 3, # reemplaza 2 por 3
-    TRUE ~ edad)) # Mantiene iguales los valores que no cambian.
+    edad == 29 ~ 30, # <1>
+    edad == 2 ~ 3,  # <2>
+    TRUE ~ edad))    # <3>
 ```
 
-```{r}
+1.  Reemplaza 29 por 30
+2.  Reemplaza 2 por 3
+3.  Mantiene iguales los valores que no cambian
+
+```{r, warning=F, message=F}
 Datos <- Datos %>%
   mutate(clase_rec = case_when(
-    clase %in% c(2, 3) ~ 0, # Si 'clase' es 2 o 3, asigna "0"
+    clase %in% c(2, 3) ~ 0, # <1> 
     TRUE ~ clase)) 
 
 table(Datos$clase_rec)
 ```
+
+1.  Si 'clase' es 2 o 3, asigna "0"
 
 La opción TRUE en este comando significa "todos los demás valores". Si no se añadiera, todos los valores que no coinciden con las condiciones se enviarían a perdidos (NA).
 
@@ -165,19 +173,22 @@ Datos <- Datos %>%
 ``` r
 datos <- datos %>%
   mutate(estudios_universitarios = case_when(
-    estudios %in% levels(estudios)[1:5] ~ 0,  # Agrupar niveles 1 a 5 en 0
-    estudios %in% levels(estudios)[6] ~ 1,    # Agrupar nivel 6 en 1 
+    estudios %in% levels(estudios)[1:5] ~ 0,  # <1>
+    estudios %in% levels(estudios)[6] ~ 1,    # <2> 
     TRUE ~ NA_real_                           
   ))
 ```
 
-*Esta opción es útil si se quiere convertir en cardiotónico una variable categórica con muchas categorías, aunque la primera opción es igual de buena en estos casos*
+1.  Agrupar niveles 1 a 5 en 0
+2.  Transformar el nivel 6 en 1
+
+*Esta opción es útil si se quiere convertir en dicotómica una variable con muchas categorías, aunque la primera opción es igual de buena en estos casos*
 
 ### Ejemplos útiles
 
 Otros ejemplos de recodificar variables:
 
--   Se pueden utilizar símbolos lógicos como el \>,\<,\|,& etc a la hora de recodificar variables
+-   Se pueden utilizar símbolos lógicos como el \>, \<, \|, & etc a la hora de recodificar variables
 
 ``` r
 datos<-datos %>%
@@ -217,55 +228,5 @@ elec23 <- elec23 %>%
     -   `mutate(across(c(n, edad), round))`
     -   `mutate(across(where(is.numeric), round))`
     -   `mutate(across(starts_with(“nombr"), tolower))`
-
-------------------------------------------------------------------------
-
-## 3. Añadir etiquetas a la variable
-
-Ver las etiquetas de una variable: `attr(datos$var, "labels")`:
-
-**Para cambiar las etiquetas se usa el comando factor** *(de dyplr)*
-
-``` r
-datos <- datos %>% 
-  mutate(variable = factor(variable, 
-                    levels = c(1,2,3),
-                    labels = c("Etiqueta1","Etiqueta2","Eriqueta3")))
-```
-
--   `levels` = c(1,2,3) indica el conjunto de números correspondientes con los valores de cada categoría de la variable.
--   `labels` =c("Etiqueta1"...) indica las etiquetas correspondientes con cada valor especificado anteriormente. Por ejemplo, en este caso a la categoría de la variable que se identifica con un 1 se le asignaría la etiqueta "Etiqueta1".
--   Ej. de cómo añadir etiquetas:
-
-```{r}
-table(datos$mujer)
-
-datos <- datos %>%
-  mutate(mujer = factor(mujer, levels = c(0, 1), labels = c("Hombre","Mujer"))) 
-
-table(datos$mujer)
-```
-
-Si se quiere etiquetar algún carácter de una variable numérica sin transformarla en factor, se puede usar el siguiente comando:
-
-``` r
-library(labelled)
-val_labels(datos$variable) <- c(Etiqueta1 = 0, Etiqueta2 = 1)
-```
-
-Este comando también es útil en el caso de escalas: por ejemplo, en la escala de ideología del 1 al 10 para poner que el 1 es extrema izquierda y el 10 extrema derecha, pero dejarlo como numérico y sin necesidad de etiquetar todas las categorías.
-
-```{r include=FALSE}
-library(labelled)
-```
-
-```{r}
-class(datos$ideol)
-
-val_labels(datos$ideol) <- c(Extrema_izq = 1, Extrema_dcha = 10)
-
-class(datos$ideol)
-val_labels(datos$ideol)
-```
 
 ------------------------------------------------------------------------
