--- a/df-var/group_by.qmd
+++ b/df-var/group_by.qmd
@@ -11,7 +11,7 @@ source("00_datos/source.R")
 
 `group_by` es un comando del paquete `tidyverse` que permite agrupar todas las observaciones de una base de datos a partir de los valores concretos de una de sus variables. Esto lo vuelve un comando de gran utilidad a la hora de modificar y crear nuevas bases de datos a partir de las ya existentes, o para crear nuevas variables. También es muy útil a la hora de obtener resúmenes de la información existente.
 
-El comando por sí solo no genera ninguna transformación visible en la base de datos, pero sí lo hace invisiblemente. Por eso, después de realizar las transformaciones necesarias a partir del `group_by` es necesario desagrupar para evitar posibles problemas futuros. Para esto se usa la función `ungruop()`.
+El comando por sí solo no genera ninguna transformación visible en la base de datos, pero sí lo hace invisiblemente. Por eso, después de realizar las transformaciones a partir del `group_by` es recomendable desagrupar para evitar posibles problemas futuros. Para esto se usa la función `ungruop()`.
 
 ## summarise
 
